# standardize

./: .gitignore  LICENSE  README.md  phonenumber-parser.py  pyproject.toml  requirements.txt
non-standardized-list/: Gemeinden.csv
standardized-list/: Gemeinden.csv
